--- a/style/sections/_hero.scss
+++ b/style/sections/_hero.scss
@@ -7,7 +7,7 @@
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
-  background-image: url('../../assets/background.png');
+  background-image: url('assets/background.png');
   top: 0;
   left: 0;
   bottom: 0;
